# pyshadow

./: .travis.yml  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-build.yml  python-publish.yml
pyshadow/: main.py
pyshadow/resources/: querySelector.js
pyshadow/resources/test/: scenarios.html
tests/: qa.py  test.py  test1.py  test_local.py
